# wikipedia-cli

./: Cargo.toml  README.md
src/: filters.rs  lib.rs  main.rs
src/ui/: mod.rs
