[package]
name = "wikipedia-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html2text = "0.5.1"
reqwest = {version = "0.11.17", features = ["blocking"]}
tui = { package = "ratatui" }
crossterm = "0.26"
scraper = "0.16.0"
